tests/outref/TAK02.ref

-- single quotes column alias
select id as 'quoted' from names;
select id as 'ali.co' from names;
select id as 'ab12_' from names;
select id as 'ab12_.asdf' from names;
select ida from (select 8 as 'IDA','ey' as firstname, '' as lastname)n1;

-- single quoted table alias
select id from names as 'N1';
select n1.id from names as 'N1';
select lastName from names group by lastName having exists (select alias1.lastName from names as 'ALIAS1' group by alias1.lastName);
select * from names n1 natural join names as 'longeralias';
select 1 from names as 'N1' inner join (select n2.id from names as 'N2' where n2.id = 1 OR n2.id = 2) as 'ALIAS2' ON (n1.id = alias2.id ) inner join names as 'N3' ON (n1.id = n3.id);

-- shorthand alias --
-- single quotes column alias
select id 'quoted' from names;
select ida from (select 8 'ida','ey' as firstname, '' as lastname)n1;

-- single quoted table alias
select id from names 'N1';
select n1.id from names 'N1';
select lastName from names group by lastName having exists (select alias1.lastName from names 'ALIAS1' group by alias1.lastName);
select * from names n1 natural join names 'longeralias';
select 1 from names 'N1' inner join (select n2.id from names 'N2' where n2.id = 1 OR n2.id = 2) 'ALIAS2' ON (n1.id = alias2.id ) inner join names 'N3' ON (n1.id = n3.id);

-- mixed usage of shortform, quoted and identifier alias usage
select 1 from names as 'N1' inner join (select n2.id from names "N2" where n2.id = 1 OR n2.id = 2) alias2 ON (n1.id = alias2.id ) inner join names as n3 ON (n1.id = n3.id);

-- NULL table alias usage
select id from (select 1 as id);
select ida from (select 1 as "ida");
select ida from (select 1 as 'IDA');
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 2:1: select id as 'quoted' from names;
                       ^^^^^^^^
OCTO> select id as 'quoted' from names;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 3:1: select id as 'ali.co' from names;
                       ^^^^^^^^
OCTO> select id as 'ali.co' from names;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 4:1: select id as 'ab12_' from names;
                       ^^^^^^^
OCTO> select id as 'ab12_' from names;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 5:1: select id as 'ab12_.asdf' from names;
                       ^^^^^^^^^^^^
OCTO> select id as 'ab12_.asdf' from names;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 6:1: select ida from (select 8 as 'IDA','ey' as firstname, '' as las...
                                       ^^^^^
OCTO> select ida from (select 8 as 'IDA','ey' as firstname, '' as lastname)n1;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 8:1: select id from names as 'N1';
                                  ^^^^
OCTO> select id from names as 'N1';
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 9:1: select n1.id from names as 'N1';
                                     ^^^^
OCTO> select n1.id from names as 'N1';
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 10:1: ...lias1.lastName from names as 'ALIAS1' group by alias1.lastName);
                                           ^^^^^^^^
OCTO> select lastName from names group by lastName having exists (select alias1.lastName from names as 'ALIAS1' group by alias1.lastName);
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 11:1: select * from names n1 natural join names as 'longeralias';
                                                        ^^^^^^^^^^^^^
OCTO> select * from names n1 natural join names as 'longeralias';
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 12:1: select 1 from names as 'N1' inner join (select n2.id from names ...
                                  ^^^^
OCTO> select 1 from names as 'N1' inner join (select n2.id from names as 'N2' where n2.id = 1 OR n2.id = 2) as 'ALIAS2' ON (n1.id = alias2.id ) inner join names as 'N3' ON (n1.id = n3.id);
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE
LINE 14:1: select id 'quoted' from names;
                     ^^^^^^^^
OCTO> select id 'quoted' from names;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL, expecting EXCEPT or UNION or RIGHT_PAREN
LINE 15:1: select ida from (select 8 'ida','ey' as firstname, '' as lastna...
                                     ^^^^^
OCTO> select ida from (select 8 'ida','ey' as firstname, '' as lastname)n1;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE
LINE 17:1: select id from names 'N1';
                                ^^^^
OCTO> select id from names 'N1';
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE
LINE 18:1: select n1.id from names 'N1';
                                   ^^^^
OCTO> select n1.id from names 'N1';
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL, expecting EXCEPT or UNION or RIGHT_PAREN
LINE 19:1: ...t alias1.lastName from names 'ALIAS1' group by alias1.lastName);
                                           ^^^^^^^^
OCTO> select lastName from names group by lastName having exists (select alias1.lastName from names 'ALIAS1' group by alias1.lastName);
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE
LINE 20:1: select * from names n1 natural join names 'longeralias';
                                                     ^^^^^^^^^^^^^
OCTO> select * from names n1 natural join names 'longeralias';
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE
LINE 21:1: select 1 from names 'N1' inner join (select n2.id from names 'N2...
                               ^^^^
OCTO> select 1 from names 'N1' inner join (select n2.id from names 'N2' where n2.id = 1 OR n2.id = 2) 'ALIAS2' ON (n1.id = alias2.id ) inner join names 'N3' ON (n1.id = n3.id);
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 23:1: select 1 from names as 'N1' inner join (select n2.id from names ...
                                  ^^^^
OCTO> select 1 from names as 'N1' inner join (select n2.id from names "N2" where n2.id = 1 OR n2.id = 2) alias2 ON (n1.id = alias2.id ) inner join names as n3 ON (n1.id = n3.id);
OCTO> select id from (select 1 as id);
id
1
(1 row)
OCTO> select ida from (select 1 as "ida");
ida
1
(1 row)
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 27:1: select ida from (select 1 as 'IDA');
                                        ^^^^^
OCTO> select ida from (select 1 as 'IDA');
OCTO> 
